Disabled Stetho; updated dependencies.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="PaddedText">
+    <item name="android:padding">@dimen/text_padding</item>
+  </style>
+
 </resources>
