--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/colorPrimaryDark"
+  android:theme="@style/PaddedText"
   tools:context=".controller.MainActivity">
 
   <TextView
-    android:id="@+id/pithy_saying"
+    android:id="@+id/saying_text"
     style="@style/TextAppearance.AppCompat.Large"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
@@ -19,6 +20,17 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintWidth_percent="0.75"/>
+
+  <TextView
+    android:id="@+id/source_name"
+    style="@style/TextAppearance.AppCompat.Caption"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:textAlignment="center"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/saying_text"
     app:layout_constraintWidth_percent="0.75"/>
 
 </android.support.constraint.ConstraintLayout>
